--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "serialize-javascript": "^2.1.1"
+  }
 }
